# rosbag_s3

./: .gitignore  README.md
.rosbag_processor/: conf.json.template  connect.json.template
for_local_testing/: main.py
rosbag_processor/: LICENSE  README.md  pyproject.toml  requirements.txt
rosbag_processor/src/rosbag_processor/: downloader.py  logger.py  parser.py  settings.py  uploader.py
rosbag_tester/: README.md  main.py
