[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

#[project]
#name = "my-project"
#version = "1.0.0"
#dynamic = ["dependencies"]

#[tool.hatch.metadata.hooks.requirements_txt]
#files = ["requirements.txt"]


#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "rosbag_processor"
version = "0.1"
dynamic = ["dependencies"]
authors = [
  { name="Grigoriy Kanavenko", email="g.kanavenko@gmail.com" },
]
description = "ROSBAG Files downloader and parser"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
"Homepage" = "https://github.com/greg-kan/rosbag_s3"
"Bug Tracker" = "https://github.com/greg-kan/rosbag_s3/issues"
